[package]
name = "parallel-collider"
version = "0.1.0"
authors = ["Igor null <m1el.2027@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.3"
num_cpus = "^1.13.0"
# packed_simd = { version = "0.3.4", package = "packed_simd_2" }
